crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__function__extra_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/extra_arguments.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: arity error: `<function f at [POINTER]>` expects 2 args but 4 args were passed
   ╭─[craftinginterpreters/test/function/extra_arguments.lox:6:1]
   │
 6 │ f(1, 2, 3, 4); // expect runtime error: Expected 2 arguments but got 4.
   │ ┬  
   │ ╰── expects 2 arguments
───╯
